--- a/380930/380930.html
+++ b/380930/380930.html
@@ -14,7 +14,7 @@
     <body>
       <header>
         <div class="header">
-          <a class="logo" href="../index/index.html">
+          <a class="logo" href="../index.html">
             <img src="https://static.nhentai.net/img/logo.090da3be7b51.svg" alt="logo" width="46" height="30">
           </a>
         </header>
