--- a/index.html
+++ b/index.html
@@ -48,3 +48,11 @@
         </div>
         </a>
       </div>
+      <div class="gallery" data-tags="5037 6346 12227 33172">
+        <a href="./363446/363446.html" class="cover">
+          <img class="lazyload" width="224" height="316" data-src="https://t5.nhentai.net/galleries/2065046/thumb.jpg" src="https://t5.nhentai.net/galleries/2065046/thumb.jpg">
+      <div class="caption">
+        Ooya-chan's Private Lessons‼
+      </div>
+      </a>
+    </div>
