--- a/363446/363446.html
+++ b/363446/363446.html
@@ -80,7 +80,7 @@
                 <img class="card-image" src="./g/044.jpg">
                 <img class="card-image" src="./g/045.jpg">
                 <img class="card-image" src="./g/046.jpg">
-                <img class="card-image" src="./g/047.jpg">
+                <img class="card-image" src="./g/047.png">
         </div>
         <script src="app.js"></script>
     </body>
